# msql

./: Makefile  README
doc/: Commercial  Conscienceware  HISTORY  License  Minerva  acl.txt  mSQL-1.0.11.ps  mSQL-1.0.ps  mSQL-Invoice.ps  mSQL-Invoice.txt  msql-pwr.README  scanner.doc
scripts/: make-install  make-target  mkinstalldirs  run_daemon  sys-arch  w32-target
src/: Makefile  Makefile.tmpl  setup
src/common/: MANIFEST  Makefile  Makefile.tmpl  config.h.in  debug.c  debug.h  flock.c  portability.h  site.h  strlib.c  tmpnam.c  ualarm.c
src/conf/: configure  configure.in  dirent.c  linux-icmp.c  mmap.c  site.mm.in  uint.c
src/makedepend/: Makefile  Makefile.tmpl  def.h  main.c
src/makegen/: directory.mm  install.mm  lex.mm  libinstall.mm  library.mm  makegen  makegen.cf.in  object.mm  program.mm  touch.mm  yacc.mm
src/msql/: Makefile  Makefile.tmpl  acl.c  errmsg.h  insert_test.c  libmsql.c  msql.c  msql.h  msql_lex.c  msql_priv.h  msql_proc.c  msql_yacc.y  msqladmin.8  msqladmin.c  msqld.c  msqldb.c  msqldump.c  net.c  relshow.c  sample.acl  sample.msql  select_test.c  version.h
src/regexp/: Makefile  Makefile.tmpl  README  regerror.c  regexp.c  regexp.h  regsub.c  timer.c  try.c
src/tests/: cachetest  killer  max_users  relshow_test  rtest
src/tests/rtest.src/: 1.out  1.test  2.out  2.test  3.out  3.test  4.out  4.test  5.out  5.test  6.out  6.test  7.out  7.test  8.out  8.test  9.out  9.test
targets/Linux-2.4.9-e.40smp-i686/: 2  Makefile  Makefile.full  Makefile.tmpl  arch-info  config.status  setup  site.mm
(+119 files in other folders)
